--- a/public/app/views/pages/home.html
+++ b/public/app/views/pages/home.html
@@ -1,5 +1,10 @@
-<div class="jumbotron text-center">
-    <h1>Home Page</h1>
+<!-- home.html -->
 
-    <p>{{ home.message }}</p>
+<div align="center" style="margin-top: 15%" class="container">
+	<div class="btn" role="group" aria-label="...">
+			<button type="button" class="btn btn-block btn-lg">Availability</button>
+			<button type="button" class="btn btn-block btn-lg">Booking</button>
+			<button type="button" class="btn btn-block btn-lg">Administrator</button>
+			<button type="button" class="btn btn-block btn-lg">Account</button>
+	</div>
 </div>
