--- a/public/app/views/pages/home.html
+++ b/public/app/views/pages/home.html
@@ -1,10 +1,24 @@
 <!-- home.html -->
 
-<div align="center" style="margin-top: 15%" class="container">
-	<div class="btn" role="group" aria-label="...">
-			<button type="button" class="btn btn-block btn-lg">Availability</button>
-			<button type="button" class="btn btn-block btn-lg">Booking</button>
+<!-- HEADER -->
+<header style="text-align: center; margin:5%">
+  <h1 style="font-size: 6em">Purple Fox Karaoke Club</h1>
+
+  <img id="logo" style="max-height: 10em" alt="Brand" src="http://www.moderntots.com/media/catalog/product/cache/1/image/655x/040ec09b1e35df139433887a97daa66f/p/u/purple_fox.jpg">
+</header>
+
+
+<div class="container" style="width:50%">
+
+	<div class="row" align="center">
+	  <div class="col-xs-6">
+	  	<button type="button" class="btn btn-block btn-lg">Availability</button>
+	  	<button type="button" class="btn btn-block btn-lg">Booking</button>
+	  </div>
+	  <div class="col-xs-6">
 			<button type="button" class="btn btn-block btn-lg">Administrator</button>
 			<button type="button" class="btn btn-block btn-lg">Account</button>
+	  </div>
 	</div>
+
 </div>
