--- a/public/app/views/pages/users/userForm.html
+++ b/public/app/views/pages/users/userForm.html
@@ -1,19 +1,16 @@
-<!-- register.html -->
-
-
-
-
-
 
     <div class="container">
-        <h1>Register</h1>
-    	</br>
+    	<div class="page-header">
+        	<h1 ng-if="user.type == 'create'">Register</h1>
+        	<h1 ng-if="user.type == 'edit'">Edit User</h1>
+        </div>
+    	
 
         <form>
         	<div class="col-sm-6">
 				<div class="form-group">
-				  	<label for="name">Name</label>
-				    <input type="name" class="form-control" placeholder="First and Last">
+				  	<label class="control-label">Name</label>
+				    <input type="text" class="form-control" placeholder="First and Last">
 				</div>
 				<div class="form-group">
 				  	<label for="username">Username</label>
@@ -57,8 +54,12 @@
 
 			</div>
 
-			<div style="text-align:center" >
+			<div class="container" ng-if="user.type == 'create'">
 		  		<button type="submit" class="btn btn-default">Register</button>
+		  	</div>
+		  	<div ng-if="user.type == 'edit'">
+		  		<button type="submit" class="btn btn-default">Save Changes</button>
+		  		<button type="submit" class="btn btn-default">Cancel</button>
 		  	</div>
 		</form>
 
