--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -35,6 +35,7 @@
 
     <!-- controllers -->
 
+    <script src="app/controllers/mainCtrl.js"></script>
     <script src="app/controllers/contactCtrl.js"></script>
     <script src="app/controllers/bookingCtrl.js"></script>
     <script src="app/controllers/userCtrl.js"></script>
