--- a/public/app/views/pages/users/userForm.html
+++ b/public/app/views/pages/users/userForm.html
@@ -14,7 +14,7 @@
 				</div>
 				<div class="form-group">
 				  	<label for="username">Username</label>
-				    <input type="username" class="form-control" placeholder="Username">
+				    <input type="text" class="form-control" placeholder="Username">
 				</div>
 				<div class="form-group">
 				  	<label for="password">Password</label>
@@ -33,23 +33,23 @@
 			<div class="col-sm-6">
 				<div class="form-group">
 					<label for="bday">Birthday</label>
-					<input type="birthday" class="form-control" placeholder="Birthday">
+					<input type="date" class="form-control">
 				</div>
 				<div class="form-group">
 					<label for="exampleInputEmail1">Home Address</label>
-					<input type="Address" class="form-control" placeholder="Home Address">
+					<input type="text" class="form-control" placeholder="Home Address">
 				</div>
 				<div class="form-group">
 					<label for="city">City</label>
-					<input type="City" class="form-control" placeholder="City">
+					<input type="text" class="form-control" placeholder="City">
 				</div>
 				<div class="form-group">
 					<label for="postalCode">Postal Code</label>
-					<input type="Postal Code" class="form-control" placeholder="Postal Code">
+					<input type="text" class="form-control" placeholder="Postal Code">
 				</div>
 				<div class="form-group">
 					<label for="phoneNum">Phone Number</label>
-					<input type="Phone Number" class="form-control" placeholder="Phone Number">
+					<input type="tel" class="form-control" placeholder="Phone Number">
 				</div>
 
 			</div>
