--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -41,6 +41,7 @@
     <script src="app/controllers/userCtrl.js"></script>
 
     <!-- services -->
+    <script src="app/services/userService.js"></script>
 
 
     <!-- main Angular app files -->
