--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -34,7 +34,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
 
     <!-- controllers -->
-
+		<script src="app/controllers/pwReset.js"></script>
     <script src="app/controllers/mainCtrl.js"></script>
     <script src="app/controllers/contactCtrl.js"></script>
     <script src="app/controllers/bookingCtrl.js"></script>
