Adding changes to routes, usercontroller , index , and all

--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -86,7 +86,7 @@
 						<div class="col-md-6">
 							<div ng-if="!main.loggedIn">
                 	<p class="navbar-text navbar-right"><a href="/pwReset" class="navbar-link">Forgot Your Password?</a></p>
-                	<p class="navbar-text navbar-right"><a href="/users/create" class="navbar-link">Register</a></p>
+                	<p class="navbar-text navbar-right"><a href="/users/register" class="navbar-link">Register</a></p>
             	</div>
 							<div ng-if="main.loggedIn">
                 <button type="button" class="btn btn-default navbar-btn pull-right" ng-click="main.loggedIn = !main.loggedIn">Logout</button>                
