--- a/public/app/views/pages/users/all.html
+++ b/public/app/views/pages/users/all.html
@@ -3,16 +3,13 @@
 <div class="page-header">
 	<h1>
 		Admin Page 
-		<a href="/users/userForm" class="btn btn-default">
+		<a href="/users/register" class="btn btn-default">
 			<span class="glyphicon glyphicon-plus"></span> 
 			New User
 		</a>
 	</h1>
 
 </div>
-
-<p>{{ admin.message }}</p>
-
 
 
 <div class="jumbotron text-center" ng-show="user.processing">
