--- a/public/app/views/pages/booking.html
+++ b/public/app/views/pages/booking.html
@@ -55,17 +55,18 @@
     				</select>
     			</div>
 
-    			<div class="container">
-    			<button type="submit" class="btn btn-default">Times don't work?</button>
+                <div class="container">
+                    <button type="submit" class="btn btn-default">Times don't work?</button>
     			</div>
-
-    			<br>
-    			<br>
-    			<br>
     		</div>
 
             <div class="col-sm-6">
-                <button type="submit" class="btn btn-success">Book</button>
+
+                <!-- bookings-calendar goes here --> 
+
+                <div class="container">
+                    <button type="submit" class="btn btn-success">Book</button>
+                </div>
             </div>
 
     		
