more pwReset changesand added a second pwRest html page

--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -85,7 +85,7 @@
 						</div>
 						<div class="col-md-6">
 							<div ng-if="!main.loggedIn">
-                	<p class="navbar-text navbar-right"><a href="/pwReset" class="navbar-link">Forgot Your Password?</a></p>
+                	<p class="navbar-text navbar-right"><a href="/pwResetForgot" class="navbar-link">Forgot Your Password?</a></p>
                 	<p class="navbar-text navbar-right"><a href="/users/register" class="navbar-link">Register</a></p>
             	</div>
 							<div ng-if="main.loggedIn">
