included authservice, minor change to api

--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -43,6 +43,7 @@
 
     <!-- services -->
     <script src="app/services/userService.js"></script>
+	<script src="app/services/authService.js"></script>
 
 
     <!-- main Angular app files -->
