--- a/public/app/views/pages/contact.html
+++ b/public/app/views/pages/contact.html
@@ -1,6 +1,31 @@
 <!-- contact.html -->
-    <div class="jumbotron text-center">
-        <h1>Contact Page</h1>
-
-        <p>{{ contact.message }}</p>
-    </div>
+	<div class="container">	
+		<div class="page-header">
+			<h1>Contact Us</h1>
+		</div>
+	
+		
+		<form>
+			<div class="col-sm-4">
+				<div class="form-group">
+					<label class="return-email">Return Email</label>
+					<input type="text" class="form-control" placeholder="Your Email" ng-model="contactUs.email">
+				</div>
+				<div class="form-group">
+					<label class="message">Your Message</label>
+					<textarea class="form-control" rows="5" id="message"></textarea>
+				</div>
+				<div class="container">
+					<button type="submit" class="btn btn-success">Send</button>
+				</div>
+			</div>
+			
+		</form>
+		<p></p>
+		<p>Contact Information: </p>
+		<UL>
+		<LI>Phone number: 250-555-5555</LI>
+		<LI>1234 Place Ave. A1B 2C3</LI>
+		</UL>
+		
+	</div>
