--- a/public/app/views/pages/pwResetForgot.html
+++ b/public/app/views/pages/pwResetForgot.html
@@ -4,7 +4,7 @@
       </div>
     	
 
-     <form ng-submit="pwReset.sendToken()">
+     <form ng-submit="pwResetForgot.sendToken()">
 			<div class="row">
       	<div class="col-sm-6">
 					<div class="form-group">
