--- a/public/app/views/pages/pwReset.html
+++ b/public/app/views/pages/pwReset.html
@@ -8,8 +8,16 @@
 			<div class="row">
       	<div class="col-sm-6">
 					<div class="form-group">
-				  		<label for="email">Email Address</label>
-				    	<input type="email" class="form-control" placeholder="Email" ng-model="user.userData.email">
+				  		<label for="email">New Password</label>
+				    	<input type="email" class="form-control" placeholder="New Password" ng-model="user.userData.email">
+					</div>
+				</div>
+			</div>
+			<div class="row">
+      	<div class="col-sm-6">
+					<div class="form-group">
+				  		<label for="email">Confirm Password</label>
+				    	<input type="email" class="form-control" placeholder="Confirm Password" ng-model="user.userData.email">
 					</div>
 				</div>
 			</div>
