--- a/public/app/views/pages/home.html
+++ b/public/app/views/pages/home.html
@@ -16,8 +16,8 @@
 	  	<a href="/booking" type="button" class="btn btn-block btn-default btn-lg">Booking</a>
 	  </div>
 	  <div class="col-xs-6">
-			<a href="/users/all" type="button" class="btn btn-block btn-default btn-lg">Administrator</a>
-			<a href="/users/single" type="button" class="btn btn-block btn-default btn-lg">Account</a>
+			<a href="/users" type="button" class="btn btn-block btn-default btn-lg">Administrator</a>
+			<a href="/users/:user_id" type="button" class="btn btn-block btn-default btn-lg">Account</a>
 	  </div>
 	</div>
 
