--- a/public/app/views/pages/users/single.html
+++ b/public/app/views/pages/users/single.html
@@ -4,19 +4,23 @@
         	<h1>Profile Page</h1>
         </div>
 
+        <p>TEST Paragraph</p>
+        <p> {{ user.name }} </p>
+
+
         <dl>
         	<dt>Name</dt>
-        	<dd>{{ main.name }}</dd>
+        	<dd>{{ user.userData.name }}</dd>
         	<dt>Username</dt>
-        	<dd>{{ main.username }}</dd>
+        	<dd>{{ user.userData.username }}</dd>
+            <dt>Email</dt>
+            <dd>{{ user.userData.email }}</dd>            
         	<dt>Birthday</dt>
-        	<dd>{{ user.bday }} </dd>
-        	<dt>Email</dt>
-        	<dd>{{ user.email }}</dd>
+        	<dd>{{ user.userData.bday }} </dd>
         	<dt>Address</dt>
-        	<dd>{{ user.address }}</dd>
+        	<dd>{{ user.userData.address }}</dd>
         	<dt>Phone Number</dt>
-        	<dd>{{ user.phone_number }}</dd>
+        	<dd>{{ user.userData.phone_number }}</dd>
         </dl>
 
         <div class="container">
