delete user page + cancel buttons

--- a/public/app/views/pages/users/userForm.html
+++ b/public/app/views/pages/users/userForm.html
@@ -62,7 +62,7 @@
 		  	</div>
 		  	<div ng-if="user.type == 'edit'">
 		  		<button type="submit" class="btn btn-success">Save Changes</button>
-		  		<button class="btn btn-default">Cancel</button>
+		  		<a href="/users/:user_id"><button class="btn btn-default">Cancel</button></a>
 		  	</div>
 		</form>
 
