--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -64,7 +64,7 @@
                 	<form class="navbar-form navbar-right" role="login" >
                     	<div class="form-group form-group-sm">
                         	<input type="text" class="form-control" placeholder="Username" ng-model="main.username">
-                        	<input type="text" class="form-control" placeholder="Password" ng-model="main.password">
+                        	<input type="password" class="form-control" placeholder="Password" ng-model="main.password">
                     	</div>
                   	  <button type="submit" class="btn btn-default btn-sm" ng-click="main.loggedIn = !main.loggedIn">Login</button>
                 	</form>
