--- a/public/app/views/pages/deleteUser.html
+++ b/public/app/views/pages/deleteUser.html
@@ -2,7 +2,7 @@
 	<h3>Are you sure you would like to delete your account?</h3>
 	<br></br>
 	<div style="display: inline-block" ealign="center">
-		<input type="text" class="form-control" placeholder="Enter your password" ng-model="main.password">
+		<input type="password" class="form-control" placeholder="Enter your password" ng-model="main.password">
 	</div>
 	<br></br>
 	<button type="submit" class="btn btn-danger">Delete</button>
