changed layout of edit profile page

--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -79,7 +79,7 @@
 						<div class="col-md-6">
             	<ul class="nav navbar-nav">
                 	<li><a href="/"><i class="fa fa-home"></i> Home</a></li>
-                	<li><a href="/users/:user_id"><i class="fa fa-user"></i> Profile</a></li>
+                	<li><a href="/users/{{ user.userData._id }}"><i class="fa fa-user"></i> Profile</a></li>
                 	<li><a href="/availability"><i class="fa fa-calendar-o"></i> Availability</a></li>
                 	<li><a href="/booking"><i class="fa fa-book"></i> Booking</a></li>
            		</ul>
