--- a/public/app/views/pages/users/userForm.html
+++ b/public/app/views/pages/users/userForm.html
@@ -6,63 +6,66 @@
     	
 
         <form ng-submit="user.saveUser()">
-        	<div class="col-sm-6">
-				<div class="form-group">
-				  	<label class="control-label">Name</label>
-				    <input type="text" class="form-control" placeholder="First and Last" ng-model="user.userData.name">
+
+        	<div class="row">
+	        	<div class="col-sm-6">
+					<div class="form-group">
+					  	<label for="username">Username</label>
+					    <input type="text" class="form-control" placeholder="Username" ng-model="user.userData.username">
+					</div>
+					<div class="form-group" ng-if="user.type == 'create'">
+					  	<label for="password">Password</label>
+					    <input type="password" class="form-control" placeholder="Password" ng-model="user.userData.password">
+					</div>
+					<div class="form-group">
+					  	<label for="email">Email Address</label>
+					    <input type="email" class="form-control" placeholder="Email" ng-model="user.userData.email">
+					</div>
+					<div class="form-group">
+						<label for="phoneNum">Phone Number</label>
+						<input type="tel" class="form-control" placeholder="Phone Number" ng-model="user.userData.phone_number">
+					</div>
+					<div class="form-group">
+						<label for="bday">Birthday</label>
+						<input type="date" class="form-control" ng-model="user.userData.age">
+					</div>
 				</div>
-				<div class="form-group">
-				  	<label for="username">Username</label>
-				    <input type="text" class="form-control" placeholder="Username" ng-model="user.userData.username">
-				</div>
-				<div class="form-group">
-				  	<label for="password">Password</label>
-				    <input type="password" class="form-control" placeholder="Password" ng-model="user.userData.password">
-				</div>
-				<div class="form-group">
-				  	<label for="confirmPass">Confirm Password</label>
-				    <input type="password" class="form-control" placeholder="Password">
-				</div>
-				<div class="form-group">
-				  	<label for="email">Email Address</label>
-				    <input type="email" class="form-control" placeholder="Email" ng-model="user.userData.email">
+
+				<div class="col-sm-6">
+					<div class="form-group">
+					  	<label class="control-label">Name</label>
+					    <input type="text" class="form-control" placeholder="First and Last" ng-model="user.userData.name">
+					</div>
+					<div class="form-group" ng-if="user.type == 'create'">
+					  	<label for="confirmPass">Confirm Password</label>
+					    <input type="password" class="form-control" placeholder="Password">
+					</div>
+					<!-- ADDRESS CURRENTLY ONLY HOLDS Home Address -->
+					<div class="form-group">
+						<label for="exampleInputEmail1">Home Address</label>
+						<input type="text" class="form-control" placeholder="Home Address" ng-model="user.userData.address">
+					</div>
+					<div class="form-group">
+						<label for="city">City</label>
+						<input type="text" class="form-control" placeholder="City">
+					</div>
+					<div class="form-group">
+						<label for="postalCode">Postal Code</label>
+						<input type="text" class="form-control" placeholder="Postal Code">
+					</div>
 				</div>
 			</div>
 
-			<div class="col-sm-6">
-				<div class="form-group">
-					<label for="bday">Birthday</label>
-					<input type="date" class="form-control" ng-model="user.userData.age">
+			<div class="row">
+				<div class="col-sm-6">
+					<div ng-if="user.type == 'create'">
+				  		<button type="submit" class="btn btn-success">Register</button>
+				  	</div>
+				  	<div ng-if="user.type == 'edit'">
+				  		<button type="submit" class="btn btn-success">Save Changes</button>
+				  		<a href="/users/:user_id"><button class="btn btn-default">Cancel</button></a>
+				  	</div>
 				</div>
-				<div class="form-group">
-					<label for="exampleInputEmail1">Home Address</label>
-					<input type="text" class="form-control" placeholder="Home Address" ng-model="user.userData.address">
-				</div>
-
-
-				<!-- ADDRESS CURRENTLY ONLY HOLDS CITY -->
-
-				<div class="form-group">
-					<label for="city">City</label>
-					<input type="text" class="form-control" placeholder="City">
-				</div>
-				<div class="form-group">
-					<label for="postalCode">Postal Code</label>
-					<input type="text" class="form-control" placeholder="Postal Code">
-				</div>
-				<div class="form-group">
-					<label for="phoneNum">Phone Number</label>
-					<input type="tel" class="form-control" placeholder="Phone Number" ng-model="user.userData.phone_number">
-				</div>
-
 			</div>
-
-			<div class="container" ng-if="user.type == 'create'">
-		  		<button type="submit" class="btn btn-success">Register</button>
-		  	</div>
-		  	<div ng-if="user.type == 'edit'">
-		  		<button type="submit" class="btn btn-success">Save Changes</button>
-		  		<a href="/users/:user_id"><button class="btn btn-default">Cancel</button></a>
-		  	</div>
 		</form>
 
