Fixed the footer covering text at some resolutions, but we should probably fix it properly later

--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -109,11 +109,19 @@
 
 
     <!-- FOOTER -->
-    <nav class="navbar navbar-inverse navbar-fixed-bottom">
-        <div class="container">
-            <a class="navbar-text" href="/contact" class="navbar-link">Contact</a></p>
-        </div>
-    </nav>
+	<nav class="navbar navbar-inverse navbar-fixed-bottom">
+		<div class="container">
+			<a class="navbar-text" href="/contact" class="navbar-link">Contact</a></p>
+		</div>
+	</nav>
+	
+	<!-- This fixes the footer cutting off text at some resolutions -->
+	<footer class="footer">
+		<nav class="navbar">
+			<div class="container">
+			</div>
+		</nav>
+	</footer>
 
 </body>
 </html>
